Safari backface-visibility fix

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden; /*fix for Safari */
   transform: rotateX(0deg); /*fix for Firefox */
   position: absolute;
   border-radius: 5px;
